// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 jhlYqW"
>
  <h2
    class="feature__SubTitle-sc-19zs3jp-3 cgbkWe"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 jhlYqW"
>
  <h1
    class="feature__Title-sc-19zs3jp-2 eydSBX"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-19zs3jp-0 jhlYqW"
>
  <div
    class="feature__Container-sc-19zs3jp-0 feature__Group-sc-19zs3jp-1 jhlYqW eohDWc"
  >
    <h1
      class="feature__Title-sc-19zs3jp-2 eydSBX"
    >
      Unlimited films, TV programmes and more.
    </h1>
    <h2
      class="feature__SubTitle-sc-19zs3jp-3 cgbkWe"
    >
      Watch anywhere. Cancel at any time.
    </h2>
  </div>
</div>
`;
